fix: start-align icon card visual and large image
The .mg-card__icon .mg-card__visual container was centering its
children. Change align-items from center to flex-start so icons
and large images are start-aligned as intended.

--- a/stories/Components/Cards/Card/card.scss
+++ b/stories/Components/Cards/Card/card.scss
@@ -293,7 +293,7 @@ $card-variant-colours: (
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     overflow: visible;
     container-type: inline-size; // Enable container queries for icon scaling
